Media quries added for all books section. Alignment issue rectified between both features and all books sections

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ li.nav-item {
 }
 
 /*- All books section -*/
+
 div#books {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -53,3 +54,18 @@ img.card-img-top {
     margin-top: 20px;
 }
 
+
+/*- Media Queries -*/
+@media (max-width: 992px){  
+    div#books {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    div.all-books {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    img.img-fluid.rounded-start {        
+        margin: 20px;
+    }
+}
